[gd_scene load_steps=36 format=3 uid="uid://c176jppyx68n3"]

[ext_resource type="PackedScene" uid="uid://c143qtevxmo4f" path="res://Scenes/player.tscn" id="1_clw07"]
[ext_resource type="Script" path="res://Scenes/tutorial.gd" id="1_eqms8"]
[ext_resource type="Texture2D" uid="uid://bvdx8yjtx0xw5" path="res://Assets/Untitled 29.png" id="2_ybhtw"]
[ext_resource type="FontFile" uid="uid://bb4k6ydi6inda" path="res://Assets/monogram.ttf" id="3_ubel5"]
[ext_resource type="Theme" uid="uid://b8ugogwb507h5" path="res://button.tres" id="5_2moxb"]
[ext_resource type="Texture2D" uid="uid://daehuvmxk3v4y" path="res://Pixel Art Buttons.png" id="5_n4lt3"]
[ext_resource type="PackedScene" uid="uid://5v7gyxu58wm6" path="res://Scenes/map.tscn" id="16_1cbti"]
[ext_resource type="PackedScene" uid="uid://shrgbkkjcw5c" path="res://Scenes/pedestal.tscn" id="18_c3vwb"]
[ext_resource type="Texture2D" uid="uid://cmaj6j31xdl0j" path="res://Assets/bucket.png" id="19_b85gk"]
[ext_resource type="Texture2D" uid="uid://dq80m61fp8anl" path="res://Assets/crab.png" id="20_ucsdx"]
[ext_resource type="Texture2D" uid="uid://c31i7chidxikj" path="res://Assets/fish.png" id="21_15r6k"]
[ext_resource type="Texture2D" uid="uid://gmu8ayg2fveb" path="res://Assets/sunscreen.png" id="22_w4euo"]
[ext_resource type="Texture2D" uid="uid://bxdrn56uks1hx" path="res://Assets/umbrella.png" id="23_w27q1"]
[ext_resource type="Texture2D" uid="uid://bhk336srultl4" path="res://Assets/icecream.png" id="24_s6ui3"]
[ext_resource type="Texture2D" uid="uid://ck227oi8vhef6" path="res://Untitled 26.png" id="25_e37s0"]
[ext_resource type="Texture2D" uid="uid://roebrgu2ff1o" path="res://Assets/Base Character - Free/idle.png" id="26_6gg04"]

[sub_resource type="AtlasTexture" id="AtlasTexture_kixvd"]
atlas = ExtResource("2_ybhtw")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_557k6"]
atlas = ExtResource("2_ybhtw")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_kwh02"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kixvd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_557k6")
}],
"loop": true,
"name": &"default",
"speed": 3.0
}]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_yg7hb"]
texture = ExtResource("5_n4lt3")
region_rect = Rect2(70, 195, 54, 50)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qo6vb"]
texture = ExtResource("5_n4lt3")
region_rect = Rect2(134, 195, 54, 50)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xtyjn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4uaak"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_u1rd2"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_2jusl"]
load_path = "res://.godot/imported/swimsuit.png-fe85a6a88e8382d4f9b76514f8ca6e65.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_tmd6n"]
load_path = "res://.godot/imported/beachball.png-8a828f9964ac9bd993af6106688a5967.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_jyarn"]
load_path = "res://.godot/imported/coconut.png-eb1e6140750041e6c2fed291abe6d8cd.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_rdfcr"]
load_path = "res://.godot/imported/pineapple.png-e755e6b11a84e77e61f12e4f6b2d8dc3.ctex"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_12u4x"]
size = Vector2(392, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_5kgtu"]
atlas = ExtResource("26_6gg04")
region = Rect2(0, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ol72r"]
atlas = ExtResource("26_6gg04")
region = Rect2(80, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ehh1l"]
atlas = ExtResource("26_6gg04")
region = Rect2(160, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_sgnld"]
atlas = ExtResource("26_6gg04")
region = Rect2(240, 160, 80, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_tpv3m"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5kgtu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ol72r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ehh1l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sgnld")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lmtsx"]
size = Vector2(470, 39)

[node name="Tutorial" type="Node2D"]
script = ExtResource("1_eqms8")

[node name="Player" parent="." instance=ExtResource("1_clw07")]
position = Vector2(14, 6)

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(3, 3)
limit_left = -175
limit_top = -320
limit_right = 207
limit_bottom = 100

[node name="CanvasLayer" type="CanvasLayer" parent="Player/Camera2D"]
process_mode = 3

[node name="Monkey" type="AnimatedSprite2D" parent="Player/Camera2D/CanvasLayer"]
z_index = 100
position = Vector2(382, 590)
scale = Vector2(7, 7)
sprite_frames = SubResource("SpriteFrames_kwh02")
autoplay = "default"

[node name="ColorRect" type="ColorRect" parent="Player/Camera2D/CanvasLayer"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 400.0
offset_top = -87.0
offset_right = -301.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.403922, 0.584314, 0.941176, 0.886275)

[node name="monkey_text" type="Label" parent="Player/Camera2D/CanvasLayer/ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.5
offset_top = 1.0
offset_right = 163.5
offset_bottom = 27.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_ubel5")
theme_override_font_sizes/font_size = 32
autowrap_mode = 2

[node name="CloseDialogue" type="Button" parent="Player/Camera2D/CanvasLayer"]
offset_left = 780.0
offset_top = 613.0
offset_right = 833.0
offset_bottom = 646.0
theme_override_styles/normal = SubResource("StyleBoxTexture_yg7hb")
theme_override_styles/hover = SubResource("StyleBoxTexture_qo6vb")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_xtyjn")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_4uaak")
theme_override_styles/focus = SubResource("StyleBoxEmpty_u1rd2")

[node name="Check" type="Button" parent="."]
offset_left = 35.0
offset_top = 3.0
offset_right = 71.0
offset_bottom = 32.0
scale = Vector2(0.502692, 0.315819)
theme = ExtResource("5_2moxb")
text = "Check"

[node name="Pedestals" type="Node" parent="."]

[node name="SwimSuit" parent="Pedestals" instance=ExtResource("18_c3vwb")]
position = Vector2(-75, -17)
item_sprite = SubResource("CompressedTexture2D_2jusl")
item_name = "swimsuit"

[node name="BeachBall" parent="Pedestals" instance=ExtResource("18_c3vwb")]
position = Vector2(-71, 15)
item_sprite = SubResource("CompressedTexture2D_tmd6n")
item_name = "beachball"

[node name="Coconut" parent="Pedestals" instance=ExtResource("18_c3vwb")]
position = Vector2(-59, 40)
item_sprite = SubResource("CompressedTexture2D_jyarn")
item_name = "coconut"

[node name="Pineapple" parent="Pedestals" instance=ExtResource("18_c3vwb")]
position = Vector2(-37, 61)
item_sprite = SubResource("CompressedTexture2D_rdfcr")
item_name = "pineapple"

[node name="Bucket" parent="Pedestals" instance=ExtResource("18_c3vwb")]
position = Vector2(-13, 62)
item_sprite = ExtResource("19_b85gk")
item_name = "bucket"

[node name="Crab" parent="Pedestals" instance=ExtResource("18_c3vwb")]
position = Vector2(13, 62)
item_sprite = ExtResource("20_ucsdx")
item_name = "crab"

[node name="Fish" parent="Pedestals" instance=ExtResource("18_c3vwb")]
position = Vector2(39, 62)
item_sprite = ExtResource("21_15r6k")
item_name = "fish"

[node name="Sunscreen" parent="Pedestals" instance=ExtResource("18_c3vwb")]
position = Vector2(66, 44)
item_sprite = ExtResource("22_w4euo")
item_name = "sunscreen"

[node name="Umbrella" parent="Pedestals" instance=ExtResource("18_c3vwb")]
position = Vector2(92, 21)
item_sprite = ExtResource("23_w27q1")
item_name = "umbrella"

[node name="Icecream" parent="Pedestals" instance=ExtResource("18_c3vwb")]
position = Vector2(97, -13)
item_sprite = ExtResource("24_s6ui3")
item_name = "icecream"

[node name="StartTimer" type="Area2D" parent="."]
position = Vector2(-24, -29)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StartTimer"]
position = Vector2(39, -8)
shape = SubResource("RectangleShape2D_12u4x")

[node name="Tikihut" type="Sprite2D" parent="."]
z_index = 8
position = Vector2(-114, -135)
texture = ExtResource("25_e37s0")

[node name="Tikihut keeper" type="AnimatedSprite2D" parent="Tikihut"]
visible = false
z_index = 9
position = Vector2(0, 6)
sprite_frames = SubResource("SpriteFrames_tpv3m")
autoplay = "default"

[node name="CountDown" type="Label" parent="."]
z_index = 5
offset_left = -51.0
offset_top = -47.0
offset_right = -11.0
offset_bottom = -21.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_ubel5")
theme_override_font_sizes/font_size = 32
text = "15"

[node name="start_stage" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="start_stage"]
position = Vector2(17, -137.5)
shape = SubResource("RectangleShape2D_lmtsx")

[node name="map" parent="." instance=ExtResource("16_1cbti")]

[connection signal="pressed" from="Player/Camera2D/CanvasLayer/CloseDialogue" to="." method="_on_close_dialogue_pressed"]
[connection signal="pressed" from="Check" to="." method="_on_check_pressed"]
[connection signal="body_entered" from="StartTimer" to="." method="_on_start_timer_body_entered"]
[connection signal="body_entered" from="start_stage" to="." method="_on_start_stage_body_entered"]
